<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:textStyle="bold"
        android:text="@string/Title" />

    <EditText
        android:id="@+id/InputTemp"
        android:layout_width="250dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_the_temperature"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:background="@drawable/button_border"
        android:textSize="25sp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/cTOf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:background="@drawable/button_border"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:text="@string/Celcius_to_fahrenheit"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/fTOc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@drawable/button_border"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:text="@string/fahrenheit_to_celcius"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/cTOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:background="@drawable/button_border"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:text="@string/celcius_to_kelvin"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/kTOc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:background="@drawable/button_border"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:text="@string/kelvin_to_celcius"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/fTOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:background="@drawable/button_border"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:text="@string/fahrenheit_to_kelvin"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/kTOf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button_border"
        android:textAllCaps="false"

        android:text="@string/kelvin_to_fahrenheit"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/result"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_margin="1dp"
        android:background="@drawable/button_border"
        android:gravity="center"
        android:text="@string/_0_degrees"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>